@@ -77,7 +77,9 @@ Note that when asking for revision 1, you can get a revision 10.0. To avoid that
         <td>No, defaults to '.'</td></tr>
     <tr><td>prefix</td><td>the prefix to use for the property names set (will be <i>prefix</i>.revision, <i>prefix</i>.new.revision, ...)</td>
         <td>No, defaults to ivy</td></tr>
-    <tr><td>settingsRef</td><td><span class="since">(since 2.0)</span> A reference to the ivy settings that must be used by this task</td><td>No, 'ivy.instance' is taken by default.</td></tr>
+    <tr><td>settingsRef</td><td>A reference to the ivy settings that must be used by this task <span class="since">(since 2.0)</span>.</td><td>No, 'ivy.instance' is taken by default.</td></tr>
+    <tr><td>resolver</td><td>the name of the resolver to use for build number calculation <span class="since">(since 2.1)</span></td>
+        <td>No, all available resolvers will be used by default.</td></tr>
 </tbody>
 </table>
 <h1>Examples</h1>
