@@ -237,6 +237,22 @@ name|ivy
 operator|.
 name|plugins
 operator|.
+name|resolver
+operator|.
+name|DependencyResolver
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|plugins
+operator|.
 name|version
 operator|.
 name|VersionMatcher
@@ -356,6 +372,12 @@ name|defaultBuildNumber
 init|=
 literal|"0"
 decl_stmt|;
+specifier|private
+name|String
+name|resolver
+init|=
+literal|null
+decl_stmt|;
 specifier|public
 name|String
 name|getModule
@@ -472,6 +494,30 @@ block|{
 name|defaultValue
 operator|=
 name|default1
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getResolver
+parameter_list|()
+block|{
+return|return
+name|resolver
+return|;
+block|}
+specifier|public
+name|void
+name|setResolver
+parameter_list|(
+name|String
+name|resolver
+parameter_list|)
+block|{
+name|this
+operator|.
+name|resolver
+operator|=
+name|resolver
 expr_stmt|;
 block|}
 specifier|public
@@ -656,27 +702,9 @@ argument_list|(
 name|settings
 argument_list|)
 decl_stmt|;
-name|ModuleRevisionId
-index|[]
-name|revisions
+name|PatternMatcher
+name|patternMatcher
 init|=
-name|searcher
-operator|.
-name|listModules
-argument_list|(
-name|ModuleRevisionId
-operator|.
-name|newInstance
-argument_list|(
-name|organisation
-argument_list|,
-name|module
-argument_list|,
-name|branch
-argument_list|,
-literal|".*"
-argument_list|)
-argument_list|,
 operator|new
 name|PatternMatcher
 argument_list|()
@@ -754,8 +782,95 @@ literal|"buildnumber-matcher"
 return|;
 block|}
 block|}
+decl_stmt|;
+name|ModuleRevisionId
+index|[]
+name|revisions
+decl_stmt|;
+if|if
+condition|(
+name|resolver
+operator|==
+literal|null
+condition|)
+block|{
+name|revisions
+operator|=
+name|searcher
+operator|.
+name|listModules
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+name|organisation
+argument_list|,
+name|module
+argument_list|,
+name|branch
+argument_list|,
+literal|".*"
+argument_list|)
+argument_list|,
+name|patternMatcher
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|DependencyResolver
+name|depResolver
+init|=
+name|settings
+operator|.
+name|getResolver
+argument_list|(
+name|resolver
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|depResolver
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|BuildException
+argument_list|(
+literal|"Unknown resolver: "
+operator|+
+name|resolver
+argument_list|)
+throw|;
+block|}
+name|revisions
+operator|=
+name|searcher
+operator|.
+name|listModules
+argument_list|(
+name|depResolver
+argument_list|,
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+name|organisation
+argument_list|,
+name|module
+argument_list|,
+name|branch
+argument_list|,
+literal|".*"
+argument_list|)
+argument_list|,
+name|patternMatcher
+argument_list|)
+expr_stmt|;
+block|}
 name|ArtifactInfo
 index|[]
 name|infos
